--- a/src/main/resources/templates/User/V3/resume_.html
+++ b/src/main/resources/templates/User/V3/resume_.html
@@ -378,242 +378,118 @@
         <main class="content">
           <div class="container mt-1">
             <h4 class="mb-4">MY RESUME</h4>
-            <form>
+            <form th:action="@{/user-resume/update}" th:object="${resumeRequest}" method="post">
+              <!-- Thông tin cá nhân -->
               <div class="row mb-3">
                 <div class="col-md-6">
-                  <label for="contactName" class="form-label"
-                    >Họ và tên <i class="fa fa-question-circle"></i
-                  ></label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="contactName"
-                    placeholder="Nguyễn Văn A"
-                  />
+                  <label for="contactName" class="form-label">Họ và tên</label>
+                  <input type="text" class="form-control" id="contactName" th:field="*{name}" required/>
                 </div>
                 <div class="col-md-6">
-                  <label for="contactEmail" class="form-label"
-                    >Email cá nhân <i class="fa fa-question-circle"></i
-                  ></label>
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="contactEmail"
-                    placeholder="nhuhoa02@gmail.com"
-                  />
-                </div>
-              </div>
-              <div class="row mb-3">
-                <div class="col-md-6">
-                  <label for="contactPhone" class="form-label"
-                    >Điện thoại <i class="fa fa-question-circle"></i
-                  ></label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="contactPhone"
-                    placeholder="0905123456"
-                  />
-                </div>
-                <div class="col-md-6">
-                  <label for="interviewAddress" class="form-label"
-                    >Địa chỉ phỏng vấn <i class="fa fa-question-circle"></i
-                  ></label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="interviewAddress"
-                  />
+                  <label for="contactEmail" class="form-label">Email cá nhân</label>
+                  <input type="email" class="form-control" id="contactEmail" th:field="*{email}" required/>
                 </div>
               </div>
 
+              <!-- Điện thoại và địa chỉ -->
               <div class="row mb-3">
                 <div class="col-md-6">
-                  <label for="sex" class="form-label"
-                    >Giới tính <i class="fa fa-question-circle"></i
-                  ></label>
-                  <select class="form-select" id="sex">
-                    <option selected>Nam</option>
-                    <option selected>Nữ</option>
-                    <option selected>Khác</option>
+                  <label for="contactPhone" class="form-label">Điện thoại</label>
+                  <input type="text" class="form-control" id="contactPhone" th:field="*{phone}" required/>
+                </div>
+                <div class="col-md-6">
+                  <label for="interviewAddress" class="form-label">Địa chỉ phỏng vấn</label>
+                  <input type="text" class="form-control" id="interviewAddress" th:field="*{address}" required/>
+                </div>
+              </div>
+
+              <!-- Giới tính và Ngày sinh -->
+              <div class="row mb-3">
+                <div class="col-md-6">
+                  <label for="sex" class="form-label">Giới tính</label>
+                  <select class="form-select" id="sex" th:field="*{sex}">
+                    <option value="Nam">Nam</option>
+                    <option value="Nữ">Nữ</option>
+                    <option value="Khác">Khác</option>
                   </select>
                 </div>
                 <div class="col-md-6">
-                  <label for="dateOfBirth" class="form-label"
-                    >Ngày sinh <i class="fa fa-question-circle"></i
-                  ></label>
-                  <input
-                    type="date"
-                    class="form-control"
-                    id="dateOfBirth"
-                    value="2004-07-11"
-                  />
+                  <label for="dateOfBirth" class="form-label">Ngày sinh</label>
+                  <input type="date" class="form-control" id="dateOfBirth" th:field="*{dateOfBirth}" required/>
                 </div>
               </div>
+
+              <!-- Trường học -->
               <div class="bordered-box mb-3">
                 <h4>Trường học</h4>
                 <div class="row mb-3">
                   <div class="col-md-6">
-                    <label for="schoolName" class="form-label"
-                      >Tên trường <i class="fa fa-question-circle"></i
-                    ></label>
-                    <input type="text" class="form-control" id="schoolName" />
+                    <label for="schoolName" class="form-label">Tên trường</label>
+                    <input type="text" class="form-control" id="schoolName" th:field="*{schoolName}"/>
                   </div>
                   <div class="col-md-6">
                     <label for="degree" class="form-label">Bằng cấp</label>
-                      <i class="fa fa-question-circle"></i
-                    ></label>
-                    <input type="text" class="form-control" id="degree" />
-                  </div>
-                  
-                  <div class="col-md-6 mt-3">
-                    <label for="startDate" class="form-label"
-                      >Ngày bắt đầu <i class="fa fa-question-circle"></i
-                    ></label>
-                    <input
-                      type="date"
-                      class="form-control"
-                      id="startDate"
-                      value="2020-07-11"
-                    />
+                    <select id="degree" class="form-control" th:field="*{degree}">
+                      <option th:each="level : ${T(poly.com.Enum.EducationLevel).values()}"
+                              th:value="${level}" th:text="${level}">
+                      </option>
+                    </select>
                   </div>
 
                   <div class="col-md-6 mt-3">
-                    <label for="endDate" class="form-label"
-                      >Ngày kết thúc <i class="fa fa-question-circle"></i
-                    ></label>
-                    <input
-                      type="date"
-                      class="form-control"
-                      id="endDate"
-                      value="2022-10-07"
-                    />
+                    <label for="startDate" class="form-label">Ngày bắt đầu</label>
+                    <input type="date" class="form-control" id="startDate" th:field="*{startDate}"/>
+                  </div>
+
+                  <div class="col-md-6 mt-3">
+                    <label for="endDate" class="form-label">Ngày kết thúc</label>
+                    <input type="date" class="form-control" id="endDate" th:field="*{endDate}"/>
                   </div>
                   <div class="col-md-6 mt-3">
-                    <label for="degree" class="form-label">GPA</label>
-                      <i class="fa fa-question-circle"></i
-                    ></label>
-                    <input type="text" class="form-control" id="degree" />
+                    <label for="gpa" class="form-label">GPA</label>
+                    <input type="number" step="0.1" class="form-control" id="gpa" th:field="*{GPA}"/>
                   </div>
                 </div>
               </div>
+
+              <!-- Kinh nghiệm -->
               <div class="bordered-box mb-3">
                 <h4>Kinh nghiệm</h4>
                 <div class="row mb-3">
                   <div class="col-md-6">
-                    <label for="jobTitle" class="form-label"
-                      >Tiêu đề <i class="fa fa-question-circle"></i
-                    ></label>
-                    <input type="text" class="form-control" id="jobTitle" />
+                    <label for="jobTitle" class="form-label">Tiêu đề</label>
+                    <input type="text" class="form-control" id="jobTitle" th:field="*{jobTitle}"/>
                   </div>
                   <div class="col-md-6">
-                    <label for="companyName" class="form-label"
-                      >Công ty <i class="fa fa-question-circle"></i
-                    ></label>
-                    <input type="text" class="form-control" id="companyName" />
+                    <label for="companyName" class="form-label">Công ty</label>
+                    <input type="text" class="form-control" id="companyName" th:field="*{companyName}"/>
                   </div>
 
                   <div class="col-md-6 mt-3">
-                    <label for="startDate" class="form-label"
-                      >Ngày bắt đầu <i class="fa fa-question-circle"></i
-                    ></label>
-                    <input
-                      type="date"
-                      class="form-control"
-                      id="startDate"
-                      value="2020-07-11"
-                    />
+                    <label for="startJobDate" class="form-label">Ngày bắt đầu</label>
+                    <input type="date" class="form-control" id="startJobDate" th:field="*{start}"/>
                   </div>
 
                   <div class="col-md-6 mt-3">
-                    <label for="endDate" class="form-label"
-                      >Ngày kết thúc <i class="fa fa-question-circle"></i
-                    ></label>
-                    <input
-                      type="date"
-                      class="form-control"
-                      id="endDate"
-                      value="2022-10-07"
-                    />
+                    <label for="endJobDate" class="form-label">Ngày kết thúc</label>
+                    <input type="date" class="form-control" id="endJobDate" th:field="*{end}"/>
                   </div>
 
                   <div class="mb-3 mt-3">
-                    <label for="jobDescription" class="form-label"
-                      >Mô tả công việc <i class="fa fa-question-circle"></i
-                    ></label>
-                    <div class="editor-toolbar">
-                      <button type="button"><i class="fa fa-bold"></i></button>
-                      <button type="button">
-                        <i class="fa fa-italic"></i>
-                      </button>
-                      <button type="button">
-                        <i class="fa fa-underline"></i>
-                      </button>
-                      <button type="button">
-                        <i class="fa fa-list-ul"></i>
-                      </button>
-                      <button type="button">
-                        <i class="fa fa-list-ol"></i>
-                      </button>
-                      <button type="button">
-                        <i class="fa fa-align-left"></i>
-                      </button>
-                      <button type="button">
-                        <i class="fa fa-align-center"></i>
-                      </button>
-                      <button type="button">
-                        <i class="fa fa-align-right"></i>
-                      </button>
-                      <button type="button"><i class="fa fa-undo"></i></button>
-                      <button type="button"><i class="fa fa-redo"></i></button>
-                    </div>
-                    <div class="editor-content" contenteditable="true"></div>
+                    <label for="jobDescription" class="form-label">Mô tả công việc</label>
+                    <textarea class="form-control" id="jobDescription" th:field="*{jobDescription}"></textarea>
                   </div>
                 </div>
               </div>
 
-              <div class="mb-3">
-                <label for="skills" class="form-label"
-                  >Kỹ năng <i class="fa fa-question-circle"></i
-                ></label>
-                <div class="editor-toolbar">
-                  <button type="button"><i class="fa fa-bold"></i></button>
-                  <button type="button"><i class="fa fa-italic"></i></button>
-                  <button type="button"><i class="fa fa-underline"></i></button>
-                  <button type="button"><i class="fa fa-list-ul"></i></button>
-                  <button type="button"><i class="fa fa-list-ol"></i></button>
-                  <button type="button">
-                    <i class="fa fa-align-left"></i>
-                  </button>
-                  <button type="button">
-                    <i class="fa fa-align-center"></i>
-                  </button>
-                  <button type="button">
-                    <i class="fa fa-align-right"></i>
-                  </button>
-                  <button type="button"><i class="fa fa-undo"></i></button>
-                  <button type="button"><i class="fa fa-redo"></i></button>
-                </div>
-                <div class="editor-content" contenteditable="true"></div>
-                <button type="button" class="btn btn-link">
-                  Xem gợi ý kỹ năng
-                </button>
-              </div>
-              <button type="button" class="btn btn-link">
-                + Kĩ năng cần thiết
-              </button>
-
+              <!-- Nút lưu -->
               <div class="d-flex justify-content-between">
-                <button type="button" class="btn btn-primary">
-                  Xem trước
-                </button>
-                <button type="submit" class="btn btn-primary">
-                  Lưu
-                </button>
+                <button type="submit" class="btn btn-primary">Lưu</button>
               </div>
             </form>
           </div>
         </main>
+
 
         <footer class="footer">
           <div class="container-fluid">
